Update theme color. Avoid autozoom on ios safari.

--- a/resources/assets/sass/custom.sass
+++ b/resources/assets/sass/custom.sass
@@ -5,3 +5,9 @@
 
 label
   margin-bottom: 0
+
+@media screen and (-webkit-min-device-pixel-ratio:0)
+  select,
+  textarea,
+  input
+    font-size: 16px
